# review-recommendations

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
configs/: config.yaml
embeddings/learn/: plan.md  text_clean.py  tokenizer.py  tokenizer_pipeline.py  train_tokenizer.py
experiments/: eda.ipynb  eda2.ipynb  eda3.ipynb  eda4.ipynb  matrix_factorization.ipynb
models/: model.py
study/: study.md
utils/: json_utlities.py
