[project]
name = "review-recommendations"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
numpy = "^2.3.2"
jupyter = "^1.1.1"
ijson = "^3.4.0"
pandas = "^2.3.2"
pyarrow = "^21.0.0"
matplotlib = "^3.10.6"
sentence-transformers = "^5.1.0"
nltk = "^3.9.1"
tokenizers = "^0.22.0"

